# crewai-trip-planner-example

./: .env.example  environment.yml  pyproject.toml
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
src/planner/: crew.py  main.py
src/planner/config/: agents.yaml  tasks.yaml
src/planner/tools/: browser_tools.py  search_tools.py
src/tool/: search_tools.py
