[tool.poetry]
name = "planner"
version = "0.1.0"
description = ""
authors = ["williamkhoo <william_khoo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.11"}
langchain = "^0.1.20"
unstructured = "0.10.25"
duckduckgo-search = "^6.1.0"
langchain-groq = "^0.1.4"

[tool.poetry.scripts]
planner = "planner.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
